--- a/typeYou/users/templates/students/mypage.html
+++ b/typeYou/users/templates/students/mypage.html
@@ -5,6 +5,14 @@
 {% block content %}
 <h1>{{ site_name }}</h1>
 <h3>In Progress</h3>
+<h3>Recently Solved</h3>
+<section>
+    <ul>
+        {% for quiz in request.user.solve_quiz_set.all %}
+        <li><a href="{{ quiz.get_absolute_url }}">{{ quiz.hash_id }}</a></li>
+        {% endfor %}
+    </ul>
+</section>
 <h3>Recently Uploaded Quizzes</h3>
 <section>
     <ul>
