--- a/typeYou/users/templates/teachers/signup.html
+++ b/typeYou/users/templates/teachers/signup.html
@@ -8,6 +8,7 @@
     {% csrf_token %} 
     <input type="text" name="first_name" placeholder="first name" required>
     <input type="text" name="last_name" placeholder="last name" required>
+    <input type="email" name="email" placeholder="email" required>
     <input type="text" name="phonenumber" placeholder="phonenumber" required>
     <input type="text" name="username" placeholder="username" required>
     <input type="password" name="password" placeholder="password" required>
