--- a/typeYou/users/templates/teachers/verification.html
+++ b/typeYou/users/templates/teachers/verification.html
@@ -8,6 +8,7 @@
     {% csrf_token %} 
     <input type="hidden" name="first_name" value="{{ first_name }}">
     <input type="hidden" name="last_name" value="{{ last_name }}">
+    <input type="hidden" name="email" value="{{ email }}">
     <input type="hidden" name="phonenumber" value="{{ phonenumber }}">
     <input type="hidden" name="username" value="{{ username }}">
     <input type="hidden" name="password" value="{{ password }}">
